# servier-test

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  journal_drug_extractor.py  pyproject.toml
dags/: dag.py
servier/data/: drug_mentions_graph.json
servier/src/: cleaner.py  config.py  graph_builder.py  loader.py  merger.py  pipeline.py  utils.py
sql/: daily_sales_2019.sql  sales_by_type_and_client_2019.sql
tests/: smoke_test.py
